# Pulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260709_0001_competitor_price_research.py  20260709_0002_price_research_audit.py  20260710_0003_pricing_evidence_pipeline.py  20260712_0003_business_knowledge_rag.py  20260712_0004_pricing_watches.py  20260714_0004_lifespan_column_patches.py  20260714_0005_json_text_to_jsonb.py  20260715_0006_merge_pricing_watches_and_jsonb_heads.py
backend/app/: main.py
backend/app/api/: auth.py  automations.py  campaigns.py  competitor_prices.py  health.py  integrations.py  knowledge.py  portfolio.py
backend/app/campaigns/: __init__.py  generator.py  templates.py
backend/app/core/: config.py  convex.py  database.py  deps.py  http_retry.py  llm.py  logging.py  logging_setup.py  ratelimit.py  security.py
backend/app/integrations/: __init__.py  base.py  csv_adapter.py  mindbody_adapter.py  registry.py  square_adapter.py  stripe_adapter.py
backend/tests/: test_activity.py  test_adapters_registry.py  test_auth.py  test_automations.py  test_campaign_knowledge.py  test_campaign_parser.py  test_competitor_prices.py  test_compliance.py  test_csv_adapter.py  test_engagement_webhooks.py  test_ingest.py  test_oauth.py  test_pricing_product.py  test_provider_adapters.py  test_scoring.py  test_webhooks.py
(+91 files in other folders)
