[project]
name = "pulse-backend"
version = "0.1.0"
description = "Pulse — AI customer retention platform (backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "httpx-secure>=1.0.0",
    "extruct>=0.18",
    "cryptography>=44.0",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "anthropic>=0.40",
    "pyjwt[crypto]>=2.10",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
    "pgvector>=0.3",
    "boto3>=1.35",
    "resend>=2.5",
    "twilio>=9.3",
]

[project.optional-dependencies]
integrations = [
    "stripe>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "aiosqlite>=0.20",  # in-memory DB for ingest round-trip tests
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
